--- a/css/main.css
+++ b/css/main.css
@@ -9,23 +9,20 @@
  */
 body{
     background-color: #F7F5E6;
-    text-align: center;
+  /*  text-align: center;*/
     color: #A5A5AF;
 }
-img{
-    width: 100%;
-    display: block;
-}
+
 
 textarea{
-    width:100%;
+    
     border-radius: 5px;
     font-size: 16px;
     font-family: Arial;
 }
 
 input{
-    width: 100%;
+   /* width: 100%; */
     border-radius: 5px;
     font-size: 16px;
     font-family: Arial;
@@ -44,21 +41,10 @@ a:visited{
     color: #015249;
 }
 
-.nav{
-    width: 100%;
-    margin-bottom: 10px;
-    background-color: #77C9D4;
-    color: #57BC90;
-    padding-left: 5px;
-    text-align: left;
-    font-family: "Arial Black";
-    font-size: 16px;
-}
-
-#form-div{
+-div{
     margin: 10px auto;
 }
-
+ */
 .form-input{
     width: 100%;
     text-align: center;
@@ -71,7 +57,7 @@ a:visited{
 .form-container{
     text-align: center;
     margin: 20px auto;
-    width: 100%;
+    /*width: 100%; */
 }
 
 #msg{
@@ -79,46 +65,25 @@ a:visited{
 }
 
 
-.button{    /* I took the sizing from https://fdossena.com/?p=html5cool/buttons/i.frag */
-    border-radius: 0.15em;
-    box-sizing: border-box;
-    text-transform:uppercase;
-    color:#FFFFFF;
-    background-color:#57BC90;
-    padding:0.7em 1.4em;
-    margin:0 0.3em 0.3em 0;
+
+.gal-image{
+    width: 100%;
+    height: 225px;
+    margin: 0px auto 50px auto;
 }
-
-
-
-
 @media (min-width: 600px) {
     /*
      * your desktop css here
-     */
-
-    img{
-        float: left;
-        width: 50%;
-        margin: 0px 10px 10px 0px;
-    }
-    p{
-       text-align: left;
+    */
+    p {
+        text-align: left;
         font-size: 1.618em;
     }
 
 
-    .nav{
-        height: 2.618em;
-        padding-top: 5px;
-        font-size: 2.618em;
-    }
-
-
-    .form-container{
-        width: 60%;
-    }
 }
+
+
 
 
 
